# tts-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  batch_cli.py  config.py  pyproject.toml  server.py  start-server.bat  start-ui.bat
director/: agent.py
doc/: browser-extension-api.md
extension-chrome/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
extension-firefox/: background.js  content.css  content.js  manifest.json  popup.js
mimo_tts/: audio_utils.py  client.py  models.py
pipeline/: batch.py  resume.py  splitter.py
tests/: test_client.py  test_director.py  test_splitter.py
voice_lab/: manager.py  voices.json
