[project]
name = "tts-platform"
version = "0.1.0"
description = "MiMo V2.5 导演级语音生产工作站"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "gradio>=5.0.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
